# llm-zoomcamp-2026-intro_rag

./: .gitignore  README.md  pyproject.toml
hw/hv04/: hv04.ipynb
hw/hv05/: hv05.ipynb
hw/hv06_dlt/: hv06_dlt.ipynb
hw/hw01/: hw01.ipynb
sessions/s01_rag/: rag_cleaned.ipynb
