[project]
name = "llm-zoomcamp-2026-intro-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "jupytext>=1.19.3",
    "minsearch>=0.1.0",
    "nbdime>=4.0.4",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "toyaikit>=0.0.11",
]
